# linalg-viz

./: .gitignore  LICENSE  README.md  generate_gifs.py  pyproject.toml  requirements.txt
linalg_viz/: __init__.py
linalg_viz/animation/: __init__.py  animator.py  easing.py  timeline.py
linalg_viz/core/: __init__.py  matrix.py  vector.py
linalg_viz/examples/: basic_3d.py  basic_vectors.py  cross_product.py  dot_product_arithmetic.py  eigenvectors.py  eigenvectors_3d.py  grid_transform_3d.py  linear_transform.py  linear_transform_3d.py  matrix_matrix_arithmetic.py  matrix_vector_arithmetic.py  timeline_animation.py
linalg_viz/objects/: __init__.py
linalg_viz/rendering/: __init__.py  colors.py  matrix_display.py  renderer2d.py  renderer3d.py
linalg_viz/scene/: __init__.py  camera.py  grid.py  matrix_scene.py  scene.py
